--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-SUPABASE_DB_URL="postgresql://postgres:qwerty10@db.xxxxx.supabase.co:5432/postgres"
+SUPABASE_DB_URL="postgresql://postgres:Ub4c6[w|s4Id@db.eqrtqprtalrvszkpxvmw.supabase.co:5432/postgres"
 
 Jwt_secret="asdfghjkl12345678"
