--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,2 @@
-SUPABASE_DB_URL="postgresql://postgres:Ub4c6[w|s4Id@db.eqrtqprtalrvszkpxvmw.supabase.co:5432/postgres"
-
+DATABASE_URL="postgresql://postgres.eqrtqprtalrvszkpxvmw:uqe2e9RoCxCSjXbO@aws-1-ap-south-1.pooler.supabase.com:5432/postgres"
 Jwt_secret="asdfghjkl12345678"
